# slinoss

./: .gitignore  AGENTS.md  README.md  manifest.scm  pyproject.toml  setup.py
.github/workflows/: release-wheel.yml
csrc/causal_conv1d/: causal_conv1d.cpp
deploy/dgxh100/uea-hypersweep-4gpu/: Dockerfile  README.md  job.sbatch
docs/: decode.md
docs/benchmarks/: nextchar_decode_rtx3060.md
examples/: nextchar.py
experiments/PPG_DaLiA/: README.md  analysis.py  config.yaml  dataloader.py  model.py  run.py  trainer.py  utils.py
experiments/PPG_DaLiA/hyperparameters/: sweep.py
experiments/UEA/: README.md  analysis.py  compare_architectures.py  config.yaml  dataloader.py  model.py  precache.py  run.py  trainer.py  utils.py
experiments/UEA/hyperparameters/: analysis.py  sweep.py
experiments/language_modeling/: .gitignore  README.md  compare_runs.py  config.yaml  data.py  model.py  requirements.txt  run.py  utils.py
experiments/throughput_comparison/: README.md  analysis.py  bench_mixer_tokens_per_s.py  config.yaml  dlinoss_jax.py  models.py  pyproject.toml  requirements.txt  run.py  utils.py
scripts/: bench_v2x2ssd.py
scripts/perf/: __init__.py  _common.py  _nextchar.py  _nextchar_model.py  _profiled_nextchar_model.py  bench_mixer_step.py  bench_nextchar.py  bench_v2x2ssd.py  compare_perf.py  ncu_report.py  profile_nextchar.py  profile_scanprep_bwd.py  profile_v2x2ssd.py  run_ncu_report.sh
slinoss/: __init__.py
slinoss/_C/: __init__.py
slinoss/layers/: __init__.py  backend.py  discretization.py  mixer.py  scanprep.py  state.py
slinoss/models/: nextchar.py
slinoss/ops/: __init__.py  cconv1d.py  decode_linear.py
slinoss/ops/scanprep/: __init__.py
slinoss/ops/scanprep/cute/: api.py  bwd.py  common.py  fwd.py
slinoss/ops/scanprep/cute/kernels/: bwd.py  fwd.py
slinoss/ops/v2x2ssd/: __init__.py  reference.py
slinoss/ops/v2x2ssd/cute/: api.py  autograd.py  decode.py
slinoss/ops/v2x2ssd/cute/kernels/: decode.py
slinoss/ops/v2x2ssd/cute/kernels/bwd/: __init__.py
slinoss/ops/v2x2ssd/cute/kernels/bwd/chunk_increment/: __init__.py  boundary.py  common.py  db.py  du.py  exact.py  param_scan.py  stage.py
slinoss/ops/v2x2ssd/cute/kernels/bwd/chunk_scan/: __init__.py  common.py  db.py  dc.py  dcdr.py  dlp.py  du.py  dz0.py  exact.py  param.py  param_scan.py
slinoss/ops/v2x2ssd/cute/kernels/fwd/: __init__.py  chunk_increment.py  chunk_scan.py  common.py  state_passing.py
slinoss/ops/v2x2ssd/cute/validation/: chunk_scan_bwd.py
slinoss/perf/: budget.py  runtime.py  schema.py
tests/: test_cconv1d.py  test_chunk_increment_bwd_cute.py  test_chunk_increment_cute.py  test_chunk_scan_bwd_db_cute.py  test_chunk_scan_bwd_dc_cute.py  test_chunk_scan_bwd_dcdr_cute.py  test_chunk_scan_bwd_dz0_cute.py  test_chunk_scan_bwd_param_cute.py  test_chunk_scan_bwd_stage_cute.py  test_cute_backend.py  test_mixer.py  test_nextchar.py  test_nextchar_decode.py  test_perf_budget.py  test_perf_schema.py  test_scanprep.py  test_state_passing_bwd_cute.py  test_v2x2ssd_cute.py  test_v2x2ssd_reference.py
(+4 files in other folders)
