[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "slinoss"
version = "0.1.0"
description = "Selective linear oscillatory state-space models."
readme = "README.md"
requires-python = ">=3.11, <3.13"
license = { file = "LICENSE" }
dependencies = [
  "torch>=2.4,<2.10",
  "numpy>=1.26",
  "tqdm>=4.66",
  "matplotlib>=3.8",
  "seaborn>=0.13",
  "pyyaml>=6.0",
]

[project.optional-dependencies]
cuda = [
  "nvidia-cutlass-dsl>=4.4.0,<4.5",
  "cuda-python>=12.4,<13.0",
  "nvidia-cuda-runtime-cu12>=12.1,<12.9",
  "nvidia-cuda-nvcc-cu12>=12.1,<12.9",
]
dev = [
  "pytest>=8",
  "ruff>=0.9.5",
  "pyright>=1.1.400",
]

[tool.setuptools.packages.find]
include = ["slinoss*"]
