[build-system]
requires = ["setuptools>=69", "wheel", "torch==2.10.0"]
build-backend = "setuptools.build_meta"

[project]
name = "slinoss"
version = "0.2.0"
description = "Selective linear oscillatory state-space models."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
dependencies = [
  "torch==2.10.0",
  "numpy>=1.26",
]

[project.optional-dependencies]
cuda = [
  "nvidia-cutlass-dsl==4.4.2",
  "cuda-python==12.9.4",
]
dev = [
  "build>=1.2",
  "pytest>=8",
  "ruff>=0.9.5",
  "pyright>=1.1.400",
]

[tool.setuptools.packages.find]
include = ["slinoss*"]
